GNOME Bugzilla – Bug 730478
Changing language from user panel does nothing
Last modified: 2014-09-02 19:10:19 UTC
When I change my language in the users panel, nothing happens. Well, the newly-selected language is written to my user file in /var/lib/AccountsService/users/, and if I visit the Region & Language panel I see the newly-selected language there. But that's a lie -- even after logging out and log back in, the previous language is still used. Changing my language from the Region & Language panel works fine. I think the difference is that I am in wheel, so the Region & Language panel is actually changing the system locale rather than my user-specific selection. I'm using the GNOME 3.12 copr on Fedora 20.
Changing language from the Region & Language panel doesn't work either when there is multiple users. Language is correct in /var/lib/AccountsService/users/username, however environment variable LANG is wrong. Looks like problem in GDM.
i think this was caused by the fix for bug 709105
So the issue here, I guess, is, accountsservice only tracks LANG, it doesn't have the various LC_ things. So we need to pass those through from the system, and then, I guess, override LANG with what's stored from accountsserivce.
Created attachment 284603 [details] [review] session: override LANG with user configured language We need to set LANG based on whats in accountsservice, for the language configuration in control-center to work. This commit partially reverts commit c672e4e49983d285e829c1ec846d22fbf19bf29a
I still need to test this.
Attachment 284603 [details] pushed as db94ed3 - session: override LANG with user configured language