session: override LANG with user configured language

We need to set LANG based on whats in accountsservice, for the
language configuration in control-center to work.

This commit partially reverts commit

c672e4e49983d285e829c1ec846d22fbf19bf29a

https://bugzilla.gnome.org/show_bug.cgi?id=730478