daemon/gdm-session.c
@@ -2395,6 +2395,7 @@ set_up_session_environment (GdmSession *self)
 {
         GdmSessionDisplayMode display_mode;
         gchar *desktop_names;
+        const char *locale;
 
         gdm_session_set_environment_variable (self,
                                               "GDMSESSION",
@@ -2412,6 +2413,17 @@ set_up_session_environment (GdmSession *self)
         }
 
         set_up_session_language (self);
+
+        locale = get_default_language_name (self);
+
+        if (locale != NULL && locale[0] != '\0') {
+                gdm_session_set_environment_variable (self,
+                                                      "LANG",
+                                                      locale);
+                gdm_session_set_environment_variable (self,
+                                                      "GDM_LANG",
+                                                      locale);
+        }
 
         display_mode = gdm_session_get_display_mode (self);
         if (display_mode == GDM_SESSION_DISPLAY_MODE_REUSE_VT) {
